--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       Número: <b id="numero"></b><br>
       Localização suspeita: <b>São Paulo – <span id="hora"></span></b><br><br>
 
-      O sistema ativou automaticamente o protocolo de emergência IA WhatsApp Protect,<br>
+      O sistema ativou automaticamente o protocolo de emergência <b>IA WhatsApp Protect</b>b>,<br>
       com escaneamento de ameaças em tempo real utilizando <b>tecnologia de Inteligência Artificial</b>.<br><br>
 
       🔐 <b>Proteção instantânea por apenas R$ 4,90</b><br>
