--- a/index.html
+++ b/index.html
@@ -1,175 +1,74 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>IA WhatsApp Protect – Alerta de Segurança</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>IA WhatsApp Protect</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #ffffff;
+      background: #f8f9fa;
+      margin: 0;
+      padding: 0;
       text-align: center;
-      padding: 30px;
-      color: #222;
     }
-
+    .container {
+      max-width: 600px;
+      margin: auto;
+      padding: 40px 20px;
+      background: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
     h1 {
-      color: #111;
-      font-size: 24px;
-      font-weight: bold;
+      color: #0a7fbd;
     }
-
-    .alerta {
-      color: #cc0000;
-      font-weight: bold;
-      margin-top: 10px;
-      font-size: 16px;
-    }
-
-    .preco {
-      font-size: 20px;
-      color: #28a745;
-      font-weight: bold;
-      margin-top: 10px;
-    }
-
-    .beneficios {
-      text-align: left;
-      display: inline-block;
-      margin: 20px auto;
-      font-size: 15px;
-      line-height: 1.6;
-    }
-
-    .contador {
+    p {
       font-size: 18px;
-      color: #cc0000;
-      font-weight: bold;
-      margin-top: 20px;
-    }
-
-    button {
-      background-color: #28a745;
-      color: #fff;
-      font-size: 18px;
-      padding: 15px 30px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-
-    button:hover {
-      background-color: #218838;
-    }
-
-    .selo-container {
-      margin-top: 30px;
-    }
-
-    .selo-container img {
-      height: 32px;
-      margin: 8px;
-      vertical-align: middle;
-    }
-
-    .prova-social {
-      font-size: 14px;
-      margin-top: 25px;
       color: #333;
     }
-
-    .feedbacks {
-      text-align: left;
+    .botao-pagamento {
       display: inline-block;
-      margin: 10px auto;
-      font-size: 13px;
-      line-height: 1.6;
-      color: #555;
+      margin-top: 30px;
+      padding: 15px 30px;
+      font-size: 18px;
+      color: #fff;
+      background-color: #0a7fbd;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: 0.3s;
     }
-
-    .rodape {
-      font-size: 11px;
+    .botao-pagamento:hover {
+      background-color: #055f8c;
+    }
+    .feedback {
       margin-top: 40px;
-      color: #999;
+      text-align: left;
     }
-
-    .icone-alerta {
-      font-size: 40px;
-      color: #cc0000;
+    .feedback blockquote {
+      background: #f1f1f1;
+      border-left: 5px solid #0a7fbd;
+      margin: 15px 0;
+      padding: 10px 20px;
     }
   </style>
-  <script>
-    function iniciarContador() {
-      let tempo = 900; // 15 minutos
-      const contadorEl = document.getElementById("contador");
-
-      const intervalo = setInterval(() => {
-        const minutos = String(Math.floor(tempo / 60)).padStart(2, '0');
-        const segundos = String(tempo % 60).padStart(2, '0');
-        contadorEl.textContent = `${minutos}:${segundos}`;
-        tempo--;
-
-        if (tempo < 0) {
-          clearInterval(intervalo);
-          contadorEl.textContent = "Expirado";
-        }
-      }, 1000);
-    }
-
-    window.onload = iniciarContador;
-  </script>
 </head>
 <body>
+  <div class="container">
+    <h1>IA WhatsApp Protect</h1>
+    <p>Ative uma camada extra de proteção automatizada para seu WhatsApp com tecnologia de IA de última geração.</p>
 
-  <div>
-    <div class="icone-alerta">🚨</div>
-    <h1><strong>IA WhatsApp Protect</strong> – Alerta de Segurança Ativado</h1>
+    <a href="https://pay.hotmart.com/P100520819" class="botao-pagamento" target="_blank">
+      Comprar Agora por R$ 4,90
+    </a>
 
-    <p class="alerta">Atividade suspeita detectada no número <strong>+55 11 9XXXX‑4026</strong><br>
-    Localização: <strong>São Paulo – 01:24h</strong></p>
-
-    <p class="preco">🛡️ Proteção imediata por apenas R$ 5,90</p>
-
-    <p>Seu WhatsApp foi marcado para ativação de emergência.<br>
-    O sistema <strong>IA WhatsApp Protect</strong> está bloqueando ameaças em tempo real com tecnologia de Inteligência Artificial.</p>
-
-    <div class="beneficios">
-      <ul>
-        <li>✔️ Inteligência Artificial com escaneamento 24h</li>
-        <li>✔️ Ativação automática via Navegador</li>
-        <li>✔️ Garantia de segurança digital e reembolso imediato</li>
-        <li>✔️ Suporte 24h via canal prioritário</li>
-      </ul>
+    <div class="feedback">
+      <h2>O que nossos clientes dizem:</h2>
+      <blockquote>"Minha conta do WhatsApp foi protegida em segundos. Vale cada centavo!"</blockquote>
+      <blockquote>"Tecnologia absurda, nunca vi nada parecido. Compra obrigatória."</blockquote>
+      <blockquote>"Simples, rápido e inteligente. E ainda é automático!"</blockquote>
+      <blockquote>"Sofri tentativa de golpe e a IA detectou na hora. Incrível!"</blockquote>
+      <blockquote>"Me sinto muito mais seguro agora. Parabéns pelo produto!"</blockquote>
     </div>
-
-    <p class="prova-social">🔒 5.423 usuários ativaram hoje</p>
-
-    <div class="feedbacks">
-      <p>🗣️ “Me salvou de um golpe no WhatsApp!” — <strong>Ana, RJ</strong></p>
-      <p>🗣️ “Simples, rápido e me deixou muito mais tranquilo.” — <strong>Eduardo, SP</strong></p>
-      <p>🗣️ “Achei que fosse vírus, mas era proteção real. Aprovado.” — <strong>Sandra, DF</strong></p>
-      <p>🗣️ “Recebi o alerta, paguei R$ 4,90 e fui protegido na hora.” — <strong>Marcos, MG</strong></p>
-      <p>🗣️ “Sistema inteligente, seguro e barato. Obrigado!” — <strong>Lívia, BA</strong></p>
-    </div>
-
-    <p class="contador">⏱️ Oferta expira em <span id="contador">15:00</span></p>
-
-    <!-- BOTÃO DE PAGAMENTO PAGSEGURO -->
-    <button onclick="window.location.href='https://pag.ae/7_Nyh7WS3'">
-      🟢 Ativar Proteção Agora – Pagar via PIX Seguro
-    </button>
-
-    <div class="selo-container">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" title="WhatsApp">
-      <img src="https://logospng.org/download/pix/logo-pix-icone-512.png" alt="Pix" title="Pagamento via Pix">
-    </div>
-
-    <p class="rodape">
-      100% Seguro • Política de Privacidade • Garantia de Reembolso<br>
-      Este site não é afiliado ao WhatsApp Inc. nem ao Google LLC.
-    </p>
   </div>
-
 </body>
 </html>
