--- a/index.html
+++ b/index.html
@@ -1,113 +1,175 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IA WhatsApp Protect</title>
+  <meta charset="UTF-8">
+  <title>IA WhatsApp Protect – Alerta de Segurança</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-      color: #333;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-    }
-
-    .container {
-      max-width: 600px;
-      background: white;
-      padding: 40px 30px;
-      margin: 40px 0;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      background-color: #ffffff;
+      text-align: center;
+      padding: 30px;
+      color: #222;
     }
 
     h1 {
-      color: #007bff;
-      font-size: 28px;
-      margin-bottom: 10px;
-      text-align: center;
+      color: #111;
+      font-size: 24px;
+      font-weight: bold;
     }
 
-    p {
+    .alerta {
+      color: #cc0000;
+      font-weight: bold;
+      margin-top: 10px;
       font-size: 16px;
+    }
+
+    .preco {
+      font-size: 20px;
+      color: #28a745;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    .beneficios {
+      text-align: left;
+      display: inline-block;
+      margin: 20px auto;
+      font-size: 15px;
       line-height: 1.6;
-      text-align: center;
-      margin-bottom: 30px;
     }
 
-    .hotmart__button-checkout {
-      display: block;
-      width: 100%;
-      background-color: #007bff;
-      color: #fff !important;
+    .contador {
       font-size: 18px;
-      text-align: center;
-      padding: 15px 0;
-      text-decoration: none;
-      border-radius: 8px;
-      transition: background 0.3s ease;
-      margin-bottom: 30px;
-    }
-
-    .hotmart__button-checkout:hover {
-      background-color: #0056b3;
-    }
-
-    .depoimentos {
+      color: #cc0000;
+      font-weight: bold;
       margin-top: 20px;
     }
 
-    .depoimentos h2 {
+    button {
+      background-color: #28a745;
+      color: #fff;
       font-size: 18px;
-      margin-bottom: 10px;
+      padding: 15px 30px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 20px;
     }
 
-    .depoimento {
-      background-color: #f1f1f1;
-      border-left: 4px solid #007bff;
-      padding: 10px 15px;
-      margin-bottom: 10px;
+    button:hover {
+      background-color: #218838;
+    }
+
+    .selo-container {
+      margin-top: 30px;
+    }
+
+    .selo-container img {
+      height: 32px;
+      margin: 8px;
+      vertical-align: middle;
+    }
+
+    .prova-social {
       font-size: 14px;
+      margin-top: 25px;
+      color: #333;
+    }
+
+    .feedbacks {
+      text-align: left;
+      display: inline-block;
+      margin: 10px auto;
+      font-size: 13px;
+      line-height: 1.6;
+      color: #555;
+    }
+
+    .rodape {
+      font-size: 11px;
+      margin-top: 40px;
+      color: #999;
+    }
+
+    .icone-alerta {
+      font-size: 40px;
+      color: #cc0000;
     }
   </style>
+  <script>
+    function iniciarContador() {
+      let tempo = 900; // 15 minutos
+      const contadorEl = document.getElementById("contador");
+
+      const intervalo = setInterval(() => {
+        const minutos = String(Math.floor(tempo / 60)).padStart(2, '0');
+        const segundos = String(tempo % 60).padStart(2, '0');
+        contadorEl.textContent = `${minutos}:${segundos}`;
+        tempo--;
+
+        if (tempo < 0) {
+          clearInterval(intervalo);
+          contadorEl.textContent = "Expirado";
+        }
+      }, 1000);
+    }
+
+    window.onload = iniciarContador;
+  </script>
 </head>
 <body>
-  <div class="container">
-    <h1>IA WhatsApp Protect</h1>
-    <p>Ative uma camada extra de proteção automatizada para seu WhatsApp com tecnologia de IA de última geração.</p>
 
-    <!-- Widget de checkout flutuante da Hotmart -->
-    <script type="text/javascript">
-      function importHotmart(){ 
-        var imported = document.createElement('script'); 
-        imported.src = 'https://static.hotmart.com/checkout/widget.min.js'; 
-        document.head.appendChild(imported); 
-        var link = document.createElement('link'); 
-        link.rel = 'stylesheet'; 
-        link.type = 'text/css'; 
-        link.href = 'https://static.hotmart.com/css/hotmart-fb.min.css'; 
-        document.head.appendChild(link);
-      } 
-      importHotmart(); 
-    </script>
+  <div>
+    <div class="icone-alerta">🚨</div>
+    <h1><strong>IA WhatsApp Protect</strong> – Alerta de Segurança Ativado</h1>
 
-    <a onclick="return false;" 
-       href="https://pay.hotmart.com/P100520919B?checkoutMode=2&off=7kov1jba" 
-       class="hotmart-fb hotmart__button-checkout">
-      Comprar Agora por R$ 4,90
-    </a>
+    <p class="alerta">Atividade suspeita detectada no número <strong>+55 11 9XXXX‑4026</strong><br>
+    Localização: <strong>São Paulo – 01:24h</strong></p>
 
-    <div class="depoimentos">
-      <h2>O que nossos clientes dizem:</h2>
-      <div class="depoimento">"Minha conta do WhatsApp foi protegida em segundos. Vale cada centavo!"</div>
-      <div class="depoimento">"Tecnologia absurda, nunca vi nada parecido. Compra obrigatória."</div>
-      <div class="depoimento">"Simples, rápido e inteligente. E ainda é automático!"</div>
-      <div class="depoimento">"Sofri tentativa de golpe e a IA detectou na hora. Incrível!"</div>
-      <div class="depoimento">"Me sinto muito mais seguro agora. Parabéns pelo produto!"</div>
+    <p class="preco">🛡️ Proteção imediata por apenas R$ 4,90</p>
+
+    <p>Seu WhatsApp foi marcado para ativação de emergência.<br>
+    O sistema <strong>IA WhatsApp Protect</strong> está bloqueando ameaças em tempo real com tecnologia de Inteligência Artificial.</p>
+
+    <div class="beneficios">
+      <ul>
+        <li>✔️ Inteligência Artificial com escaneamento 24h</li>
+        <li>✔️ Ativação automática via Navegador</li>
+        <li>✔️ Garantia de segurança digital e reembolso imediato</li>
+        <li>✔️ Suporte 24h via canal prioritário</li>
+      </ul>
     </div>
+
+    <p class="prova-social">🔒 5.423 usuários ativaram hoje</p>
+
+    <div class="feedbacks">
+      <p>🗣️ “Me salvou de um golpe no WhatsApp!” — <strong>Ana, RJ</strong></p>
+      <p>🗣️ “Simples, rápido e me deixou muito mais tranquilo.” — <strong>Eduardo, SP</strong></p>
+      <p>🗣️ “Achei que fosse vírus, mas era proteção real. Aprovado.” — <strong>Sandra, DF</strong></p>
+      <p>🗣️ “Recebi o alerta, paguei R$ 4,90 e fui protegido na hora.” — <strong>Marcos, MG</strong></p>
+      <p>🗣️ “Sistema inteligente, seguro e barato. Obrigado!” — <strong>Lívia, BA</strong></p>
+    </div>
+
+    <p class="contador">⏱️ Oferta expira em <span id="contador">15:00</span></p>
+
+    <!-- BOTÃO DE PAGAMENTO PAGSEGURO -->
+    <button onclick="window.location.href='https://pag.ae/7_Nyh7WS3'">
+      🟢 Ativar Proteção Agora – Pagar via PIX Seguro
+    </button>
+
+    <div class="selo-container">
+      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" title="WhatsApp">
+      <img src="https://logospng.org/download/pix/logo-pix-icone-512.png" alt="Pix" title="Pagamento via Pix">
+    </div>
+
+    <p class="rodape">
+      100% Seguro • Política de Privacidade • Garantia de Reembolso<br>
+      Este site não é afiliado ao WhatsApp Inc. nem ao Google LLC.
+    </p>
   </div>
+
 </body>
 </html>
